[gd_scene load_steps=12 format=3 uid="uid://bxafd210ecx0q"]

[ext_resource type="Theme" uid="uid://cptxnpii13ops" path="res://scenes/ui/game_ui_theme.tres" id="1_17uwj"]
[ext_resource type="Texture2D" uid="uid://vc2e66fyaw8n" path="res://assets/icons/no_outline/resources_icons_NO_outline.png" id="2_cvy6a"]
[ext_resource type="Script" uid="uid://cd0rx1mk07yrf" path="res://scenes/ui/inventory_panel.gd" id="2_lcq1t"]
[ext_resource type="Texture2D" uid="uid://cjvqc8l1ybo7n" path="res://assets/icons/no_outline/food_icons_NO_outline.png" id="2_ta3uk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lcq1t"]
atlas = ExtResource("2_ta3uk")
region = Rect2(97, 1, 14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_ta3uk"]
atlas = ExtResource("2_cvy6a")
region = Rect2(1, 65, 14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_b11k6"]
atlas = ExtResource("2_cvy6a")
region = Rect2(1, 81, 14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdvod"]
atlas = ExtResource("2_ta3uk")
region = Rect2(97, 17, 14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tgr1"]
atlas = ExtResource("2_ta3uk")
region = Rect2(113, 1, 14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmmu1"]
atlas = ExtResource("2_ta3uk")
region = Rect2(2, 50, 13, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yjab"]
atlas = ExtResource("2_ta3uk")
region = Rect2(1, 65, 14, 14)

[node name="InventoryPanel" type="Panel"]
scale = Vector2(1.0147, 1.00339)
size_flags_horizontal = 4
theme = ExtResource("1_17uwj")
theme_type_variation = &"BambooPanel"
script = ExtResource("2_lcq1t")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 34.0
offset_bottom = 286.0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="Coins" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Coins"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_lcq1t")

[node name="CoinLabel" type="Label" parent="MarginContainer/VBoxContainer/Coins"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="Logs" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Logs"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_ta3uk")

[node name="LogLabel" type="Label" parent="MarginContainer/VBoxContainer/Logs"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stones" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Stones"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_b11k6")

[node name="StoneLabel" type="Label" parent="MarginContainer/VBoxContainer/Stones"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="Eggs" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Eggs"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_tdvod")

[node name="EggsLabel" type="Label" parent="MarginContainer/VBoxContainer/Eggs"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="Milk" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Milk"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_4tgr1")

[node name="MilkLabel" type="Label" parent="MarginContainer/VBoxContainer/Milk"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="Wheat" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Wheat"]
custom_minimum_size = Vector2(14, 14)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_wmmu1")

[node name="WheatLabel" type="Label" parent="MarginContainer/VBoxContainer/Wheat"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"

[node name="Tomatoes" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(26, 32)
layout_mode = 2
theme_type_variation = &"InventoryItemPanel"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Tomatoes"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = SubResource("AtlasTexture_7yjab")

[node name="TomatoLabel" type="Label" parent="MarginContainer/VBoxContainer/Tomatoes"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_type_variation = &"InventoryLabel"
text = "0"
